--- a/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
@@ -80,7 +80,7 @@
                                 </ng-container>
 
                                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                                <mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="editMovement(row.ID)" (dblclick)="tabGroup.selectedIndex=1" style="cursor:pointer;"></mat-row>
                                 <!-- Row shown when there is no matching data. -->
                                 <tr class="mat-row" *matNoDataRow>
                                     <td class="mat-cell" colspan="3">Nenhum registro encontrado.</td>
