--- a/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
+++ b/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
@@ -150,8 +150,7 @@
                                 </div>
                             </form>
                         </mat-step>
-                        <mat-step [stepControl]="secondFormGroup" label="Produtos">
-                            <form [formGroup]="secondFormGroup" class="mt-3">
+                        <mat-step label="Produtos">
                                 <div class="demo-button-container col-sm-11">
                                     <button mat-mini-fab class="demo-button me-2 create-button"
                                         matTooltip="Inserir Produto" matTooltipPosition="right"
@@ -177,7 +176,7 @@
 
                                             <ng-container matColumnDef="BorrowerPersonName">
                                                 <th mat-header-cell *matHeaderCellDef> Tomador </th>
-                                                <td mat-cell *matCellDef="let element">{{element.Person.Name}}</td>
+                                                <td mat-cell *matCellDef="let element">{{element.Person == null ? '' : element.Person.Name}}</td>
                                                 <td mat-footer-cell *matFooterCellDef> </td>
                                             </ng-container>
 
@@ -201,11 +200,11 @@
                                                 <th mat-header-cell *matHeaderCellDef> </th>
                                                 <td mat-cell *matCellDef="let row">
                                                     <button mat-icon-button color="warn" title="Remover"
-                                                        style="float:right;">
+                                                        style="float:right;" (click)="removeBudgetProduct(row.ID)">
                                                         <i class="fa-solid fa-trash"></i>
                                                     </button>
                                                     <button mat-icon-button color="primary" title="Editar"
-                                                        style="float:right;">
+                                                        style="float:right;" (click)="updateBudgetProduct(row.ID)">
                                                         <i class="fa-solid fa-pen-to-square"></i>
                                                     </button>
                                                 </td>
@@ -214,7 +213,7 @@
                                             <tr mat-header-row *matHeaderRowDef="displayedColumnsBudgetProduct">
                                             </tr>
                                             <tr mat-row *matRowDef="let row; columns: displayedColumnsBudgetProduct;"
-                                                class="hover-element-row" style="cursor:pointer;">
+                                                class="hover-element-row" (dblclick)="updateBudgetProduct(row.ID)" style="cursor:pointer;">
                                             </tr>
                                             <tr mat-footer-row *matFooterRowDef="displayedColumnsBudgetProduct">
                                             </tr>
@@ -240,7 +239,7 @@
                                     </button>
 
                                 </div>
-                            </form>
+                            
                         </mat-step>
                         <mat-step [stepControl]="budgetForm2" label="Valores">
                             <form [formGroup]="budgetForm2" class="mt-3">
@@ -381,7 +380,7 @@
                                             <ng-container matColumnDef="Options">
                                                 <th mat-header-cell *matHeaderCellDef> </th>
                                                 <td mat-cell *matCellDef="let row">
-                                                    <button mat-icon-button color="warn" title="Remover"
+                                                    <button type="button" mat-icon-button color="warn" title="Remover"
                                                         style="float:right;" (click)="removeBudgetNegotiation(row.ID)">
                                                         <i class="fa-solid fa-trash"></i>
                                                     </button>
