--- a/VaccineC/src/app/pages/orcamentos/update-budget-product-dialog.html
+++ b/VaccineC/src/app/pages/orcamentos/update-budget-product-dialog.html
@@ -5,12 +5,15 @@
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Tomador</mat-label>
-                <input type="text" (click)="searchPersonByAutoComplete()" formControlName="PersonName"
-                    [(ngModel)]="PersonName" placeholder="Selecione o Tomador" aria-label="Number" matInput
-                    [formControl]="myPersonControl" [matAutocomplete]="autoPerson">
-                <mat-autocomplete #autoPerson="matAutocomplete" [displayWith]="displayStatePerson">
-                    <mat-option *ngFor="let acPerson of acPersons | async" [value]="acPerson">
-                        {{acPerson.Name}}
+                <input (click)="searchPersonByAutoComplete()" type="text"
+                    #PersonNameinput placeholder="Selecione o Tomador"
+                    aria-label="Number" matInput formControlName="PersonName"
+                    [matAutocomplete]="autoPerson" [(ngModel)]="PersonName" required>
+                <mat-autocomplete #autoPerson="matAutocomplete"
+                    [displayWith]="displayStatePerson">
+                    <mat-option *ngFor="let acPerson of acPersons | async"
+                        [value]="acPerson">
+                         {{acPerson.Name}}
                     </mat-option>
                 </mat-autocomplete>
                 <mat-icon matSuffix>search</mat-icon>
@@ -20,16 +23,22 @@
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Produto</mat-label>
-                <input type="text" (click)="searchProductByAutoComplete()" formControlName="ProductName"
-                    [(ngModel)]="ProductName" placeholder="Selecione o Produto" aria-label="Number" matInput
-                    [formControl]="myControl" [matAutocomplete]="auto" required>
-                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayState"
-                    (optionSelected)="onSelectionChanged($event)">
-                    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                <input (click)="searchProductByAutoComplete()" type="text"
+                    #ProcutNameinput placeholder="Selecione o Produto"
+                    aria-label="Number" matInput formControlName="ProductName"
+                    [matAutocomplete]="auto" [(ngModel)]="ProductName" required>
+                <mat-autocomplete #auto="matAutocomplete"
+                    [displayWith]="displayState" (optionSelected)="onSelectionChanged($event)">
+                    <mat-option *ngFor="let option of filteredOptions | async"
+                        [value]="option">
                         {{option.Name}}
                     </mat-option>
                 </mat-autocomplete>
                 <mat-icon matSuffix>search</mat-icon>
+             <mat-error
+            *ngIf="budgetProductForm.controls.ProductName.touched && budgetProductForm.controls.ProductName.invalid">
+            <span *ngIf="budgetProductForm.controls.ProductName.errors?.required">O Produto é obrigatório.</span>
+        </mat-error>
             </mat-form-field>
         </div>
 
@@ -39,6 +48,10 @@
                 <input matInput formControlName="EstimatedSalesValue" [(ngModel)]="EstimatedSalesValue" placeholder="0,00" required
                     placeholder="0,00" mask="separator.2" [thousandSeparator]="'.'" [decimalMarker]="','">
                 <span matPrefix>R$&nbsp;</span>
+                <mat-error
+                *ngIf="budgetProductForm.controls.EstimatedSalesValue.touched && budgetProductForm.controls.EstimatedSalesValue.invalid">
+                <span *ngIf="budgetProductForm.controls.EstimatedSalesValue.errors?.required">O R$ Venda é obrigatório.</span>
+            </mat-error>
             </mat-form-field>
             
             <mat-form-field appearance="fill" class="col-sm-4" [hidden]="isProductDoseHidden">
