--- a/VaccineC/src/app/pages/aplicacao/aplicacao.component.html
+++ b/VaccineC/src/app/pages/aplicacao/aplicacao.component.html
@@ -41,17 +41,17 @@
                         <ng-container matColumnDef="imageUrl">
                             <mat-header-cell *matHeaderCellDef> Foto </mat-header-cell>
                             <mat-cell *matCellDef="let element">
-                              <img [src]="element.imageUrl" /> </mat-cell>
+                              <img id="profilePic" src="{{formateProfilePicExhibition(element.Authorization.Person.ProfilePic)}}"/> </mat-cell>
                         </ng-container>
 
                         <ng-container matColumnDef="pacient">
                             <mat-header-cell *matHeaderCellDef> Tomador </mat-header-cell>
-                            <mat-cell *matCellDef="let element"> {{element.pacient}} </mat-cell>
+                            <mat-cell *matCellDef="let element"> {{element.Authorization.Person.Name}} </mat-cell>
                         </ng-container>
 
                         <ng-container matColumnDef="date">
                             <mat-header-cell *matHeaderCellDef> Data e Hora </mat-header-cell>
-                            <mat-cell *matCellDef="let element"> {{element.date}} </mat-cell>
+                            <mat-cell *matCellDef="let element"> {{element.Authorization.Event.StartDate | date: 'dd/MM/yyyy'}} às {{element.Authorization.Event.StartTime}}</mat-cell>
                         </ng-container>
 
                         <mat-header-row *matHeaderRowDef="displayedSearchColumns"></mat-header-row>
