--- a/VaccineC/src/app/pages/aplicacao/aplicacao.component.scss
+++ b/VaccineC/src/app/pages/aplicacao/aplicacao.component.scss
@@ -200,3 +200,24 @@ form {
   white-space: pre-wrap !important;
   padding-right: 1.5rem;
 }
+
+#profilePic {
+  background-image: url(../../../assets/img/default-profile-pic.png); 
+  width: 80px; 
+  height: 80px; 
+  background-size: cover; 
+  background-position: top center; 
+  border-radius: 50%; 
+  margin: 0.5rem;
+}
+
+
+.mat-column-imageUrl {
+  flex: 0 0 150px !important;
+  white-space: unset !important;
+}
+
+.mat-cell-imageUrl {
+  flex: 0 0 150px !important;
+  white-space: unset !important;
+}
